@@ -10,36 +10,26 @@ namespace cYo.Common.Win32
 	{
 		private static class UnsafeNativeMethods
 		{
-			public struct SHFILEOPSTRUCT
+            [StructLayout(LayoutKind.Sequential, CharSet = CharSet.Unicode)]
+            public struct SHFILEOPSTRUCT
 			{
 				public IntPtr hwnd;
-
 				public int wFunc;
-
 				public string pFrom;
-
 				public string pTo;
-
 				public short fFlags;
-
-				public int fAnyOperationsAborted;
-
+				public bool fAnyOperationsAborted;
 				public IntPtr hNameMappings;
-
 				public string lpszProgressTitle;
 			}
 
 			public const int FO_DELETE = 3;
-
 			public const short FOF_SILENT = 4;
+			public const short FOF_ALLOWUNDO = 0x40;
+			public const short FOF_NOCONFIRMATION = 0x10;
+			public const short FOF_NOERRORUI = 0x400;
 
-			public const short FOF_ALLOWUNDO = 64;
-
-			public const short FOF_NOCONFIRMATION = 16;
-
-			public const short FOF_NOERRORUI = 1024;
-
-			[DllImport("shell32.dll")]
+			[DllImport("shell32.dll", CharSet = CharSet.Unicode)]
 			public static extern int SHFileOperation(ref SHFILEOPSTRUCT lpFileOp);
 		}
 
@@ -59,29 +49,29 @@ namespace cYo.Common.Win32
 				}
 			}
 			if (stringBuilder.Length != 0)
-			{
-				stringBuilder.Append('\0');
-				UnsafeNativeMethods.SHFILEOPSTRUCT lpFileOp = default(UnsafeNativeMethods.SHFILEOPSTRUCT);
-				lpFileOp.hwnd = window?.Handle ?? IntPtr.Zero;
-				lpFileOp.wFunc = UnsafeNativeMethods.FO_DELETE;
-				lpFileOp.fFlags = UnsafeNativeMethods.FOF_SILENT | UnsafeNativeMethods.FOF_NOERRORUI;
-				if ((options & ShellFileDeleteOptions.NoRecycleBin) == 0)
-				{
-					lpFileOp.fFlags |= UnsafeNativeMethods.FOF_ALLOWUNDO;
-				}
-				if ((options & ShellFileDeleteOptions.Confirmation) == 0)
-				{
-					lpFileOp.fFlags |= UnsafeNativeMethods.FOF_NOCONFIRMATION;
-				}
-				lpFileOp.pFrom = stringBuilder.ToString();
-				lpFileOp.fAnyOperationsAborted = 0;
-				lpFileOp.hNameMappings = IntPtr.Zero;
-				if (UnsafeNativeMethods.SHFileOperation(ref lpFileOp) != 0)
-				{
+            {
+                stringBuilder.Append('\0');
+                UnsafeNativeMethods.SHFILEOPSTRUCT lpFileOp = default(UnsafeNativeMethods.SHFILEOPSTRUCT);
+                lpFileOp.hwnd = window?.Handle ?? IntPtr.Zero;
+                lpFileOp.wFunc = UnsafeNativeMethods.FO_DELETE;
+                lpFileOp.fFlags = UnsafeNativeMethods.FOF_SILENT | UnsafeNativeMethods.FOF_NOERRORUI;
+                if (!options.HasFlag(ShellFileDeleteOptions.NoRecycleBin))
+                {
+                    lpFileOp.fFlags |= UnsafeNativeMethods.FOF_ALLOWUNDO;
+                }
+                if (!options.HasFlag(ShellFileDeleteOptions.Confirmation))
+                {
+                    lpFileOp.fFlags |= UnsafeNativeMethods.FOF_NOCONFIRMATION;
+                }
+                lpFileOp.pFrom = stringBuilder.ToString();
+                lpFileOp.fAnyOperationsAborted = false;
+                lpFileOp.hNameMappings = IntPtr.Zero;
+                if (UnsafeNativeMethods.SHFileOperation(ref lpFileOp) != 0 || lpFileOp.fAnyOperationsAborted)
+                {
 					throw new Win32Exception();
-				}
-			}
-		}
+                }
+            }
+        }
 
 		public static void DeleteFile(ShellFileDeleteOptions options, params string[] files)
 		{
